# SocialMediaApp

./: .gitignore  README.md  pyproject.toml
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_post.py  0003_likepost.py  0004_followerscount.py
social/: settings.py  urls.py
templates/: index.html  profile.html  search.html  settings.html  signin.html  signup.html
